--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -30,6 +30,49 @@
     "        ans=\"NA\"\n",
     "print(ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#125 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10 8 10\n",
+      "10 10 3\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "B=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(N):\n",
+    "    if A[i]-B[i]>=0:\n",
+    "        ans +=A[i]-B[i]\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
