--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -69,6 +69,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#124 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "9 9 9 9 9\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=input()\n",
+    "A=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(int(N)):\n",
+    "    B=0\n",
+    "    for j in range(i):\n",
+    "        if A[i]-A[j]>=0:\n",
+    "            B+=1\n",
+    "    if B==i:\n",
+    "        ans+=1\n",
+    "print(ans)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
