--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#100 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7\n",
+      "Yay!\n"
+     ]
+    }
+   ],
+   "source": [
+    "A,B=tuple(map(int,input().split()))\n",
+    "if A<=8 and B<=8:\n",
+    "    ans=\"Yay!\"\n",
+    "else:\n",
+    "    ans=\":(\"\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#126 B"
    ]
   },
@@ -104,6 +136,13 @@
     "        ans+=1\n",
     "print(ans)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
