--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -139,10 +139,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#123 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "29\n",
+      "20\n",
+      "120\n",
+      "35\n",
+      "215\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=[int(input()) for i in range(5)]\n",
+    "ans=0\n",
+    "for i in range(5):\n",
+    "    if A[i]%10==0:\n",
+    "        ans+=A[i]\n",
+    "        A[i]=0\n",
+    "B=[str(i) for i in A]\n",
+    "C=[B[i][-1] for i in range(5)]\n",
+    "C=[int(C[i]) for i in range(5)]\n",
+    "D=[None]*5\n",
+    "for i in range(5):\n",
+    "    D[i]=int(B[i])-int(C[i])\n",
+    "E=list([n for n in(sorted(C,reverse=True)) if n>0])\n",
+    "for i in range(len(E)-1):\n",
+    "    ans+=10\n",
+    "ans=ans+E[-1]+int(sum(D))\n",
+    "print(ans)"
+   ]
   },
   {
    "cell_type": "code",
