--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -34,6 +34,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#99 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1900\n",
+      "ABD\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "if N<=999:\n",
+    "    print(\"ABC\")\n",
+    "else:\n",
+    "    print(\"ABD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -148,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "29\n",
+      "10\n",
       "20\n",
-      "120\n",
-      "35\n",
-      "215\n"
+      "30\n",
+      "40\n",
+      "50\n",
+      "150\n"
      ]
     }
    ],
@@ -180,7 +211,10 @@
     "E=list([n for n in(sorted(C,reverse=True)) if n>0])\n",
     "for i in range(len(E)-1):\n",
     "    ans+=10\n",
-    "ans=ans+E[-1]+int(sum(D))\n",
+    "try:\n",
+    "    ans=ans+E[-1]+int(sum(D))\n",
+    "except(IndexError):\n",
+    "    ans=ans+int(sum(D))\n",
     "print(ans)"
    ]
   },
