--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -69,6 +69,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#98 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "A,B=map(int,input().split());print(max([A+B,A-B,A*B]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#126 B"
    ]
   },
@@ -217,13 +244,6 @@
     "    ans=ans+int(sum(D))\n",
     "print(ans)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
