--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -244,6 +244,40 @@
     "    ans=ans+int(sum(D))\n",
     "print(ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATCODER\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "S=input()\n",
+    "start=1\n",
+    "end=0\n",
+    "ans=[]\n",
+    "for _ in range(len(S)):\n",
+    "    for i in range(len(S))[end:]:\n",
+    "        if S[i] in {\"A\",\"C\",\"G\",\"T\"}:\n",
+    "            start=i\n",
+    "            break\n",
+    "    for j in range(len(S))[start:len(S)]:\n",
+    "        end=len(S)\n",
+    "        if S[j] not in {\"A\",\"C\",\"G\",\"T\"}:\n",
+    "            end=j\n",
+    "            break\n",
+    "    ans.append(end-start)\n",
+    "if max(ans)<0:print(0)\n",
+    "else:print(max(ans))"
+   ]
   }
  ],
  "metadata": {
