--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -96,6 +96,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#97 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 10 1 2\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c,d=map(int,input().split())\n",
+    "if abs(c-a)<=d:\n",
+    "    print(\"Yes\")\n",
+    "elif abs(b-a)<=d and abs(c-b)<=d:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#126 B"
    ]
   },
@@ -243,6 +276,15 @@
     "except(IndexError):\n",
     "    ans=ans+int(sum(D))\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#122 B"
    ]
   },
   {
