--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -101,37 +101,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 30\n",
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "a,b=map(int,input().split())\n",
-    "if b>=a:\n",
-    "    print(a)\n",
-    "else:\n",
-    "    print(a-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#97 A"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -152,6 +121,60 @@
     "    print(\"Yes\")\n",
     "else:\n",
     "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#96 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b=map(int,input().split())\n",
+    "if b>=a:\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(a-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#95 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ooo\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "S=input()\n",
+    "ans=700\n",
+    "for i in range(3):\n",
+    "    if S[i]==\"o\":\n",
+    "        ans+=100\n",
+    "print(ans)"
    ]
   },
   {
