--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -183,6 +183,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#94 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5 4\n",
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c=map(int,input().split())\n",
+    "if a<=c and a+b>=c:\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#126 B"
    ]
   },
