--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -438,6 +438,44 @@
     "if max(ans)<0:print(0)\n",
     "else:print(max(ans))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#121 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=tuple(map(int,input().split()))\n",
+    "b=[]\n",
+    "for i in range(a[0]+1):\n",
+    "    b.append(list(map(int,input().split())))\n",
+    "ans=0\n",
+    "s=0\n",
+    "for j in range(a[0]+1)[1:a[0]+1]:\n",
+    "    for k in range(a[1]):\n",
+    "        s+=b[j][k]*b[0][k]\n",
+    "    s+=a[2]\n",
+    "    if s>0:\n",
+    "        ans+=1\n",
+    "    s=0\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
