--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -475,6 +475,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#120 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c=tuple(map(int,input().split()))\n",
+    "ans=[]\n",
+    "for i in range(min(a,b)+1)[1:min(a,b)+1]:\n",
+    "    if a%i==0 and b%i==0:\n",
+    "        ans.append(i)\n",
+    "print(sorted(ans,reverse=True)[c-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
