--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -507,6 +507,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#119 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "100000000 JPY\n",
+      "100.00000000 BTC\n",
+      "0.00000001 BTC\n",
+      "138000000.0038\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[]\n",
+    "ans=0\n",
+    "for _ in range(a):\n",
+    "    b.append(tuple(map(str,input().split())))\n",
+    "for i in range(a):\n",
+    "    if b[i][1]==\"JPY\":\n",
+    "        ans+=int(b[i][0])\n",
+    "    else:\n",
+    "        ans+=float(b[i][0])*380000\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
