--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -547,6 +547,100 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#118 B ×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "2 1 3\n",
+      "3 1 2 3\n",
+      "2 3 2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=map(int,input().split())\n",
+    "c=[]\n",
+    "for w in range(a):\n",
+    "    c.append(list(map(int,input().split())))\n",
+    "mini=30\n",
+    "d=0\n",
+    "for i in range(a):\n",
+    "    if c[i][0]<mini:\n",
+    "        mini=c[i][0]\n",
+    "        d=i\n",
+    "for j in range(mini+1)[1:mini+1]:\n",
+    "    for k in range(a):\n",
+    "        for m in range(c[k][0])[1:c[k][0]]:\n",
+    "            ans=list(c[d])\n",
+    "            if c[d][j]==c[k][m]:\n",
+    "                ans.append(int(c[d][j]))\n",
+    "if a==1:\n",
+    "    print(len(c[0])-1)\n",
+    "else:\n",
+    "    print(len(set(ans))-c[d][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 \n",
+      "3 1 2 3\n",
+      "3 1 2 3\n",
+      "2 1 2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-d1e8ece0d013>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mans\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m&\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mans\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=map(int,input().split())\n",
+    "c=[]\n",
+    "ans=[]\n",
+    "for w in range(a):\n",
+    "    c.append(tuple(map(int,input().split())))\n",
+    "mini=30\n",
+    "d=0\n",
+    "for i in range(a):\n",
+    "    if c[i][0]<mini:\n",
+    "        mini=c[i][0]\n",
+    "        d=i\n",
+    "for j in range(a):\n",
+    "    for m in range(c[])\n",
+    "    ans.append(list(set(c[d])&set(c[j])))\n",
+    "print(len(ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
