--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -243,6 +243,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#92 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600\n",
+      "300\n",
+      "220\n",
+      "420\n",
+      "520\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[]\n",
+    "for i in range(4):\n",
+    "    a.append(int(input()))\n",
+    "print(min(a[0],a[1])+min(a[2],a[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -634,6 +687,56 @@
     "    for m in range(c[])\n",
     "    ans.append(list(set(c[d])&set(c[j])))\n",
     "print(len(ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "2 1 3\n",
+      "3 1 2 3\n",
+      "2 3 2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = map(int, input().split())\n",
+    " \n",
+    "cnt = [0]*M\n",
+    "W = [0]*N\n",
+    "for i in range(N):\n",
+    "    W[i] = list(map(int, input().split()))\n",
+    "    for k in range(1, W[i][0]+1):\n",
+    "        cnt[W[i][k]-1] += 1\n",
+    "ans = cnt.count(N)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt.count(3)"
    ]
   },
   {
