--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -276,22 +276,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#91 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120 500 300\n",
+      "Yes\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "600"
+       "[None]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0]"
+    "a,b,c=tuple(map(int,input().split()))\n",
+    "[print(\"Yes\") if a+b>=c else print(\"No\")]"
    ]
   },
   {
