--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -739,22 +739,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#117 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3 8 5 1\n",
+      "Yes\n"
+     ]
     }
    ],
    "source": [
-    "cnt.count(3)"
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "if max(b)<sum(b)-max(b):\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
    ]
   },
   {
