--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -772,6 +772,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#116 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "114\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=set([a])\n",
+    "count=1\n",
+    "if a%2==0:\n",
+    "    a=a/2\n",
+    "    count+=1\n",
+    "else:\n",
+    "    a=3*a+1\n",
+    "    count+=1\n",
+    "while a not in b:\n",
+    "    b.add(a)\n",
+    "    if a%2==0:\n",
+    "        a=a/2\n",
+    "        count+=1\n",
+    "    else:\n",
+    "        a=3*a+1\n",
+    "        count+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
