--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -314,6 +314,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#90 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baf\n",
+      "fkd\n",
+      "fie\n",
+      "bke\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input()\n",
+    "b=input()\n",
+    "c=input()\n",
+    "print(a[0]+b[1]+c[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
