--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -876,6 +876,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#115 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4980\n",
+      "7980\n",
+      "6980\n",
+      "15950\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[]\n",
+    "for i in range(a):\n",
+    "    b.append(int(input()))\n",
+    "print(int(sum(b)-max(b)/2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
