--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -910,6 +910,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#114 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000000\n",
+      "753\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "ans=1000\n",
+    "for i in range(len(a)-2):\n",
+    "    ans=min(ans,abs(int(a[i]+a[i+1]+a[i+2])-753))\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
