--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2,6 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#160 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sippuu\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "if a[2]==a[3] and a[4]==a[5]:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -370,6 +401,37 @@
    "source": [
     "a=int(input())\n",
     "print(a//3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#160 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000\n",
+      "2000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=a//500\n",
+    "c=a%500\n",
+    "d=c//5\n",
+    "print(b*1000+5*d)"
    ]
   },
   {
