--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1003,6 +1003,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#113 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "21 -11\n",
+      "81234 94124 52141\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "c=list(map(int,input().split()))\n",
+    "d=1000\n",
+    "f=0\n",
+    "for i in range(a):\n",
+    "    if d>=abs(b[0]-c[i]*0.006-b[1]):\n",
+    "        d=abs(b[0]-c[i]*0.006-b[1])\n",
+    "        f=i\n",
+    "print(f+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
