--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1041,12 +1041,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#112 B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 9\n",
+      "25 8\n",
+      "5 9\n",
+      "2 10\n",
+      "1000 1000\n",
+      "6 1\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=[]\n",
+    "c=10000\n",
+    "for i in range(a[0]):\n",
+    "    b.append(list(map(int,input().split())))\n",
+    "for j in range(a[0]):\n",
+    "    if b[j][1]<=a[1] and c>b[j][0]:\n",
+    "        c=b[j][0]\n",
+    "if c!=10000:\n",
+    "    print(c)\n",
+    "else:\n",
+    "    print(\"TLE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
