--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1084,6 +1084,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#111 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109\n",
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "if int(a)<=int(a[0]+a[0]+a[0]):\n",
+    "    print(a[0]+a[0]+a[0])\n",
+    "else:\n",
+    "    print(str(int(a[0])+1)+str(int(a[0])+1)+str(int(a[0])+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
