--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1115,6 +1115,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#110 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 10 20\n",
+      "15\n",
+      "15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
+    "c=list(map(int,input().split()))\n",
+    "d=\"\"\n",
+    "if max(b)<min(c):\n",
+    "    for i in range(min(c)-max(b)):\n",
+    "        if a[2]<max(b)+i+1<=a[3]:\n",
+    "            d=\"No War\"\n",
+    "            break\n",
+    "        else:\n",
+    "            d=\"War\"\n",
+    "else:\n",
+    "    d=\"War\"\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
