--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1157,6 +1157,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "abc\n",
+      "ard\n",
+      "der\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[]\n",
+    "c=\"\"\n",
+    "for i in range(a):\n",
+    "    b.append(str(input()))\n",
+    "for j in range(a-1):\n",
+    "    if b[j][-1]==b[j+1][0]:\n",
+    "        if len(set(b))==a:\n",
+    "            c=\"Yes\"\n",
+    "        else:\n",
+    "            c=\"No\"\n",
+    "            break\n",
+    "    else:\n",
+    "        c=\"No\"\n",
+    "        break\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
