--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1229,6 +1229,156 @@
     "y=a[3]-a[1]\n",
     "print(a[2]-y,a[3]+x,a[2]-y-x,a[3]+x-y,end=\" \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#107 B　×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      ".....\n",
+      ".....\n",
+      "..#..\n",
+      ".....\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-99ad76c21db2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=[]\n",
+    "d=set()\n",
+    "f=set()\n",
+    "for i in range(a[0]):\n",
+    "    b.append(list(input()))\n",
+    "for j in range(a[0]):\n",
+    "    if set(b[j])=={\".\"}:\n",
+    "        f.add(j)\n",
+    "for r in list(f)[::-1]:\n",
+    "    f=list(f)\n",
+    "    b.pop(f[r])\n",
+    "c=len(f)\n",
+    "f.clear()\n",
+    "f=set()\n",
+    "for k in range(a[1]):\n",
+    "    for h in range(a[0]-c):\n",
+    "        d.add(b[h][k])\n",
+    "    if d=={\".\"}:\n",
+    "            f.add(k)\n",
+    "    d=set()\n",
+    "for q in range(a[0]-c):\n",
+    "    for l in range(len(list(f))):\n",
+    "        f=list(f)\n",
+    "        b[q].pop(f[l])\n",
+    "e=len(f)\n",
+    "for o in range(a[0]-c):\n",
+    "    for t in range(a[1]-e):\n",
+    "        print(b[o][t],end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      ".##\n",
+      "#.#\n",
+      "..#\n",
+      ".##\n",
+      "#.#\n",
+      "..#\n"
+     ]
+    }
+   ],
+   "source": [
+    "H, W = map(int, input().split())\n",
+    "t = []\n",
+    "for _ in range(H):\n",
+    "    x = input()\n",
+    "    if x != '.' * W:\n",
+    "        t += [x]\n",
+    "num = len(t)\n",
+    "k = []\n",
+    "for s in zip(*t):\n",
+    "    s = ''.join(s)\n",
+    "    if s != '.' * num:\n",
+    "        k += [s]\n",
+    "for x in zip(*k):\n",
+    "    print(''.join(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      "...##\n",
+      ".....\n",
+      "...#.\n",
+      "..#..\n",
+      ".##\n",
+      ".#.\n",
+      "#..\n"
+     ]
+    }
+   ],
+   "source": [
+    "h, w = map(int, input().split())\n",
+    "a = []\n",
+    "ans = []\n",
+    "for _ in range(h):\n",
+    "    aw = input()\n",
+    "    if set(aw) != {'.'}:\n",
+    "        a.append(aw)\n",
+    "\n",
+    "for i in zip(*a):\n",
+    "    if set(i) != {'.'}:\n",
+    "        ans.append(\"\".join(list(i)))\n",
+    "        \n",
+    "for j in zip(*ans):\n",
+    "    print(\"\".join(list(j)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
