--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#161 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30\n",
+      "30 10 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "print(a[2],a[0],a[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -401,6 +429,43 @@
    "source": [
     "a=int(input())\n",
     "print(a//3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#161 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 3\n",
+      "4 56 78 901 2 345 67 890 123 45 6 789\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
+    "c=0\n",
+    "for i in range(a[0]):\n",
+    "    if b[i]>=sum(b)*(1/(4*a[1])):\n",
+    "        c+=1\n",
+    "if c>=a[1]:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
    ]
   },
   {
@@ -1371,6 +1436,30 @@
     "        \n",
     "for j in zip(*ans):\n",
     "    print(\"\".join(list(j)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#161 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b=tuple(map(int,input().split()))\n",
+    "while True:\n",
+    "    if a>=abs(a-b):\n",
+    "        a=abs(a-b)\n",
+    "    else:\n",
+    "        break\n",
+    "print(a)"
    ]
   },
   {
