--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1440,6 +1440,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#106 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=1\n",
+    "ans=0\n",
+    "for i in range(1,a+1):\n",
+    "    if i%2==1:\n",
+    "        for j in range(1,i+1):\n",
+    "            if i%j==0:\n",
+    "                b+=1\n",
+    "        if b==8:\n",
+    "            ans+=1\n",
+    "    b=0\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#105 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=\"\"\n",
+    "if a%7==0:\n",
+    "    b=\"Yes\"\n",
+    "elif a%4==0:\n",
+    "    b=\"Yes\"\n",
+    "else:\n",
+    "    for i in range(1,16):\n",
+    "        for j in range(1,26):\n",
+    "            if 4*j+7*i==a:\n",
+    "                b=\"Yes\"\n",
+    "                break\n",
+    "            else:\n",
+    "                b=\"No\"\n",
+    "        if b==\"Yes\":\n",
+    "            break\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "15\n",
+      "18\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,3):\n",
+    "    for j in range(1,3):\n",
+    "        print(4*j+7*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
