--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1521,6 +1521,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#104 B"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -1539,6 +1548,76 @@
     "for i in range(1,3):\n",
     "    for j in range(1,3):\n",
     "        print(4*j+7*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#103 B　×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaab\n",
+      "aaaaab\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "b=str(input())\n",
+    "c=\"\"\n",
+    "for i in range(len(a)):\n",
+    "    if a[i]==0:\n",
+    "        if a==b:\n",
+    "            c=\"Yes\"\n",
+    "            break\n",
+    "        else:\n",
+    "            c=\"No\"\n",
+    "    elif a[i]==b:\n",
+    "        if a[i]+a[j:len(a)]==b:\n",
+    "            c=\"Yes\"\n",
+    "            break\n",
+    "        else:\n",
+    "            c=\"No\"\n",
+    "    else:\n",
+    "        if a[i:len(a)]+a[0:i]==b:\n",
+    "            c=\"Yes\"\n",
+    "            break\n",
+    "        else:\n",
+    "            c=\"No\"\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
    ]
   },
   {
