--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1556,7 +1556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#103 B　×"
+    "#103 B　"
    ]
   },
   {
@@ -1602,22 +1602,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#102 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1 1\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "len(a)"
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "print(abs(max(b)-min(b)))"
    ]
   },
   {
