--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1666,6 +1666,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#100 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 85\n",
+      "850000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "if a[0]==0 and a[1]!=100:\n",
+    "    print(a[1])\n",
+    "elif a[0]==0 and a[1]==100:\n",
+    "    print(101)\n",
+    "elif a[0]==1 and a[1]!=100:\n",
+    "    print(str(a[1])+\"00\")\n",
+    "elif a[0]==1 and a[1]==100:\n",
+    "    print(10100)\n",
+    "elif a[0]==2 and a[1]!=100:\n",
+    "    print(str(a[1])+\"0000\")\n",
+    "elif a[0]==2 and a[1]==100:\n",
+    "    print(1010000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
