--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1736,6 +1736,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#98 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "tgxgdqkyjzhyputjjtllptdfxocrylqfqjynmfbfucbir\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "int(input())\n",
+    "a=str(input())\n",
+    "b,c,d=set(),set(),set()\n",
+    "e=0\n",
+    "for i in range(len(a)):\n",
+    "    for j in range(i):\n",
+    "        b.add(a[j])\n",
+    "    for k in range(i,len(a)):\n",
+    "        c.add(a[k])\n",
+    "    for l in range(len(b)):\n",
+    "        b=list(b)\n",
+    "        if b[l] in c:\n",
+    "            e+=1\n",
+    "    d.add(e)\n",
+    "    b,c=set(),set()\n",
+    "    e=0\n",
+    "print(max(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "aabbca\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=str(input())\n",
+    "c=[]\n",
+    "#&は論理積を表す\n",
+    "#(len(set(b[:i])&set(b[i:a])) for i in range(1,a))はgenerator（listのようなもの）で表される\n",
+    "print(max(len(set(b[:i])&set(b[i:a])) for i in range(1,a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
