--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1803,6 +1803,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#97 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999\n",
+      "961\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=set()\n",
+    "ans=0\n",
+    "for i in range(1,a+1):\n",
+    "    for j in range(1,33):\n",
+    "        for k in range(2,10):\n",
+    "            if j**k==i:\n",
+    "                ans=i\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
