--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1838,6 +1838,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#96 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3 4\n",
+      "2\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=int(input())\n",
+    "print(sum(a)-max(a)+(max(a)*2**b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "class maxsum():\n",
+    "    def __init__(self,a:int,b:int,c:int,d:int):\n",
+    "        self.num1=a\n",
+    "        self.num2=b\n",
+    "        self.num3=c\n",
+    "        self.num4=d\n",
+    "    \n",
+    "    def print_ans(self):\n",
+    "        ans=self.num1+self.num2+self.num3-max(self.num1,self.num2,self.num3)+(max(self.num1,self.num2,self.num3)*2**(self.num4))\n",
+    "        print(ans)\n",
+    "\n",
+    "pro=maxsum(2,3,4,2)\n",
+    "pro.print_ans()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
