--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1934,6 +1934,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#94 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 7 5\n",
+      "1 2 3 4 6 8 9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
+    "c,d=0,0\n",
+    "for i in range(a[1]):\n",
+    "    if b[i]<a[2]:\n",
+    "        c+=1\n",
+    "    else:\n",
+    "        d+=1\n",
+    "print(min(c,d))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
