--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -1970,6 +1970,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#93 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 6 3\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "if a[1]-a[0]+1<=2*a[2]:\n",
+    "    for i in range(a[0],a[1]+1):\n",
+    "        print(i)\n",
+    "else:\n",
+    "    for j in range(a[2]):\n",
+    "        print(a[0]+j)\n",
+    "    for k in reversed(range(a[2])):\n",
+    "        print(a[1]-k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 6 2\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=range(a[0],a[1]+1)\n",
+    "for i in sorted(set(b[:a[2]])|set(b[-a[2]:])):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
