--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2063,6 +2063,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#92 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3 5 -1\n",
+      "12\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "b=[0]+b+[0]\n",
+    "s=0\n",
+    "for i in range(1,a+2):\n",
+    "    s=s+abs(b[i]-b[i-1])\n",
+    "for j in range(1,a+1):\n",
+    "    print(s+abs(b[j+1]-b[j-1])-abs(b[j]-b[j-1])-abs(b[j+1]-b[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
