--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2036,6 +2036,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#91 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "gh\n",
+      "2\n",
+      "gh\n",
+      "gh\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b,d,e=[],[],[0]\n",
+    "for i in range(a):\n",
+    "    b.append(str(input()))\n",
+    "c=int(input())\n",
+    "up,down=0,0\n",
+    "for j in range(c):\n",
+    "    d.append(str(input()))\n",
+    "for k in set(b):\n",
+    "    up+=b.count(k)\n",
+    "    down+=d.count(k)\n",
+    "    e.append(up-down)\n",
+    "    up,down=0,0\n",
+    "print(max(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "apple\n",
+      "orange\n",
+      "apple\n",
+      "1\n",
+      "grape\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[input() for _ in range(a)]\n",
+    "c=int(input())\n",
+    "d=[input() for _ in range(c)]\n",
+    "print(max([b.count(e)-d.count(e) for e in b]+[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
