--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2040,6 +2040,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#92 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "30 44\n",
+      "26\n",
+      "18\n",
+      "81\n",
+      "18\n",
+      "6\n",
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "c=[int(input()) for _ in range(a)]\n",
+    "ans=0\n",
+    "for i in range(a):\n",
+    "    ans+=b[0]//int(c[i])+1\n",
+    "for k in range(a):\n",
+    "    if c[k]==1 or b[0]%int(c[k])==0:\n",
+    "        ans-=1\n",
+    "print(ans+b[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#91 B"
    ]
   },
