--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -415,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -429,6 +431,39 @@
    "source": [
     "a=int(input())\n",
     "print(a//3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#163 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41 1\n",
+      "5\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
+    "if a[0]-sum(b)>=0:\n",
+    "    print(a[0]-sum(b))\n",
+    "else:\n",
+    "    print(-1)"
    ]
   },
   {
