--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2210,6 +2210,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#90 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(a[0],a[1]+1):\n",
+    "    if str(i)==str(i)[::-1]:\n",
+    "        ans+=1\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#89 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "20 18 2 18\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(a):\n",
+    "    if  i%2==1:\n",
+    "        ans-=max(b)\n",
+    "        b.remove(max(b))\n",
+    "    else:\n",
+    "        ans+=max(b)\n",
+    "        b.remove(max(b))\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#90 C"
    ]
   },
